Update example config with new template loader

--- a/sabot/settings.py.example
+++ b/sabot/settings.py.example
@@ -77,11 +77,12 @@ STATICFILES_FINDERS = (
 SECRET_KEY = 'FILL_IN_HERE'
 
 # List of callables that know how to import templates from various sources.
-#TEMPLATE_LOADERS = (
-#	'django.template.loaders.filesystem.Loader',
-#	'django.template.loaders.app_directories.Loader',
-#	 'django.template.loaders.eggs.Loader',
-#)
+TEMPLATE_LOADERS = (
+	'django.template.loaders.filesystem.Loader',
+	'django.template.loaders.app_directories.Loader',
+	'django.template.loaders.eggs.Loader',
+	'sponsor.dbtemplateloader.DBLoader',
+)
 
 MIDDLEWARE_CLASSES = (
 	'django.middleware.common.CommonMiddleware',
