faq: Create publicly visible FAQs
Split FAQs in public and internal part.
Make the public part available at site/faq.

Issue: 555

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ sabot/settings.py
 sabot/prodSettings.py
 sabot/localSettings.py
 sabot/conferenceSettings.py
+templates/sponsor/internalFaq.html
+templates/sponsor/publicFaq.html
 *.db
 media/*
