Readd accidentally removed context proc.

--- a/sabot/settings.py.example
+++ b/sabot/settings.py.example
@@ -85,6 +85,7 @@ TEMPLATES = [
 		'APP_DIRS': False,
 		'OPTIONS': {
 			'context_processors': [
+				'django.contrib.auth.context_processors.auth',
 				'django.template.context_processors.debug',
 				'django.template.context_processors.i18n',
 				'django.template.context_processors.media',
