Add support for django-recaptcha.
Really great tool. Works super smooth as expected in the django
world :)

--- a/sabot/settings.py.example
+++ b/sabot/settings.py.example
@@ -130,6 +130,7 @@ INSTALLED_APPS = (
 	'django.contrib.staticfiles',
 	'registration',
 	'crispy_forms',
+	'captcha',
 	'account',
 	'main',
 	'sponsor',
