Prepare the models for multi-year support
Add a year feld to all relevant models so that
we can assign Devrooms, Exhibitors and Sponsorings
as well as Sponsoring packages to the year they belong
to.

Additionally add a new ConferenceYear model to the main app
that will be used to store all the years that are available
for listing.

--- a/sabot/conferenceSettings.py.example
+++ b/sabot/conferenceSettings.py.example
@@ -33,6 +33,7 @@ INVOICE_NUMBER_FORMAT = "R-{year}-{cntr:03d}"
 INVOICE_VAT = 7
 INVOICE_DEFAULT_PAYMENT_TIME = timedelta(14)
 
+CURRENT_CONFERENCE_YEAR = 2017
 
 DEFAULT_FROM_EMAIL = "projects@yourconference.org"
 SPONSOR_NOTIFICATION = [
