Prepare UI for change of active year
Show the active year (and possible other years)
in the big navbar name on the left.

--- a/sabot/settings.py.example
+++ b/sabot/settings.py.example
@@ -94,6 +94,7 @@ TEMPLATES = [
 				'django.contrib.messages.context_processors.messages',
 				'sabot.template_processors.dates_processor',
 				'sabot.template_processors.settings_processor',
+				'sabot.template_processors.active_year_processor',
 
 			],
 			'loaders' : [
