Moved all dependencies to requirements.txt + small optimizations

--- a/sabot/settings.py.example
+++ b/sabot/settings.py.example
@@ -1,7 +1,7 @@
 # Django settings for sabot project.
 
 try:
-	import prod
+	import prodSettings
 	LOCAL = False
 except ImportError:
 	LOCAL = True
