--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-django-registration>=2.2
-django-crispy-forms>=1.6.1
-django-recaptcha>=1.2.0
-python-rtkit>=0.7.0
-requests>=2.12
+django
+django-registration
+django-crispy-forms
+django-recaptcha
+python-rtkit
+requests
 lxml>=3.7.2
 Pillow>=4.0.0
