Remove old site-local config example
Due to refactoring the old site-local config is now obsolete
the new config is in local_settings.py.example. The settings.py
is now static for all installations and should not be touched
anymore.

Moreover, add the local_settings.py to the example symlink to the
ignorelist, so others can remove this when needed for their
development environment.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 *.swp
 test.db*
 *.log
-sabot/prodSettings.py
 sabot/privateSettings.py
-sabot/localSettings.py
+sabot/local_settings.py
 sabot/conferenceSettings.py
 templates/sponsor/internalFaq.html
 templates/sponsor/publicFaq.html
