--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-django~=3.2
 django-registration
 django-crispy-forms
+crispy-bootstrap3
 django-recaptcha
 django-auth-ldap
 requests
 lxml>=3.7.2
 Pillow>=4.0.0
 rt>=3,<4
-python-ldap~=3.2.0
+#python-ldap~=3.2.0
 psycopg2~=2.8.6
+python-dateutil
