--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ requests
 lxml>=3.7.2
 Pillow>=4.0.0
 rt>=3,<4
-#python-ldap~=3.2.0
+python-ldap~=3.2.0
 psycopg2~=2.8.6
-python-dateutil
+drafthorse
